fixed height and object not fitting issues

--- a/style.css
+++ b/style.css
@@ -17,10 +17,14 @@
 body {
   display: flex;
   height: 100vh;
+  width: 100vw;
   align-items: center;
   justify-content: center;
   background-color: var(--cyan-dark);
-  overflow: hidden;
+  background-image: url(images/bg-pattern-top.svg),
+    url(images/bg-pattern-bottom.svg);
+  background-repeat: no-repeat, no-repeat;
+  background-position: right 48vw bottom 40vh, left 45vw top 44vh;
 }
 
 .main-card {
@@ -32,6 +36,8 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .profile-picture-background {
@@ -91,21 +97,4 @@ body {
   margin-top: 10px;
   margin-bottom: 20px;
   letter-spacing: 1px;
-}
-
-.background-circle-top,
-.background-circle-bottom {
-  z-index: -1;
-  max-width: 120%;
-  position: absolute;
-}
-
-.background-circle-top {
-  left: -300px;
-  top: -500px;
-}
-
-.background-circle-bottom {
-  right: -300px;
-  bottom: -600px;
 }
